examples/v0.2/errors/type_mismatch_boolean.nova
// Expected Error:
// Datatype mismatch.

flag: B = true

flag = 123